--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -25,12 +25,12 @@ body {
 h1{
     color: #007cba;
 }
-.header, .nav, h1{
+.cabecera, .barra-navegacion, h1{
     background-color: white;
     display:block;
 
 }
-.nav{
+.barra-navegacion{
     background: #007cff;
 
     margin: 0;
